--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalDoctor">
-        <activity android:name=".prescription"/>
+        <activity android:name=".OldRecord"></activity>
+        <activity android:name=".prescription" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".login" />
         <activity android:name=".MainActivity">
